# most_preprocessing_tools

./: .gitignore  CMakeLists.txt  README.md
inc/: aligner.hpp  ga.hpp  polygon.hpp  simplepoint.hpp  simplifier.hpp
src/: aligner.cpp  aligner_main.cpp  auto_segmenter.cpp  frame_extractor_main.cpp  ga.cpp  ga_main.cpp  geos_main.cpp  hsvtest.cpp  multi_simplifier.cpp  pof2wkt.cpp  polygon.cpp  rotator_main.cpp  segmenter_main.cpp  simplifier.cpp  simplifier_main.cpp  smoke_remover.cpp  terminal.cpp  twkt_converter.cpp  vcp_main.cpp
test_data/multi_simp/: commands_m.txt  commands_s.txt  link_brown.txt
test_data/multi_simp/brown1070/: fix.sh  gen_contours.sh
test_data/multi_simp/brown1070/Bon/: Bone01.pgm.pof  Bone02.pgm.pof  Bone03.pgm.pof  Bone04.pgm.pof  Bone05.pgm.pof  Bone06.pgm.pof  Bone07.pgm.pof  Bone08.pgm.pof  Bone09.pgm.pof  Bone10.pgm.pof  Bone11.pgm.pof  Bone12.pgm.pof  Bone13.pgm.pof  Bone14.pgm.pof  Bone15.pgm.pof  Bone16.pgm.pof  Bone17.pgm.pof  Bone18.pgm.pof  Bone19.pgm.pof  Bone20.pgm.pof
test_data/multi_simp/brown1070/Gla/: Glas01.pgm.pof  Glas02.pgm.pof  Glas03.pgm.pof  Glas04.pgm.pof  Glas05.pgm.pof  Glas06.pgm.pof  Glas07.pgm.pof  Glas08.pgm.pof  Glas09.pgm.pof  Glas10.pgm.pof  Glas11.pgm.pof  Glas12.pgm.pof  Glas13.pgm.pof  Glas14.pgm.pof  Glas15.pgm.pof  Glas16.pgm.pof  Glas17.pgm.pof  Glas18.pgm.pof  Glas19.pgm.pof  Glas20.pgm.pof
test_data/multi_simp/brown1070/Hea/: Heart01.pgm.pof  Heart02.pgm.pof  Heart03.pgm.pof  Heart04.pgm.pof  Heart05.pgm.pof  Heart06.pgm.pof  Heart07.pgm.pof  Heart08.pgm.pof  Heart09.pgm.pof  Heart10.pgm.pof  Heart11.pgm.pof  Heart12.pgm.pof  Heart13.pgm.pof  Heart14.pgm.pof  Heart15.pgm.pof  Heart16.pgm.pof  Heart17.pgm.pof  Heart18.pgm.pof  Heart19.pgm.pof  Heart20.pgm.pof
test_data/multi_simp/brown1070/Mis/: Misk01.pgm.pof  Misk02.pgm.pof  Misk03.pgm.pof  Misk04.pgm.pof  Misk05.pgm.pof  Misk06.pgm.pof  Misk07.pgm.pof  Misk08.pgm.pof  Misk09.pgm.pof  Misk10.pgm.pof  Misk11.pgm.pof  Misk12.pgm.pof  Misk13.pgm.pof  Misk14.pgm.pof  Misk15.pgm.pof  Misk16.pgm.pof  Misk17.pgm.pof  Misk18.pgm.pof  Misk19.pgm.pof  Misk20.pgm.pof  Misk21.pgm.pof  Misk22.pgm.pof  Misk23.pgm.pof  Misk24.pgm.pof  Misk25.pgm.pof  Misk26.pgm.pof
test_data/multi_simp/brown1070/arb/: arb01.pgm.pof  arb02.pgm.pof  arb03.pgm.pof  arb04.pgm.pof  msimp_arb.pgm.pof  msimp_arb01.pgm.pof  msimp_arb02.pgm.pof  msimp_arb03.pgm.pof  msimp_arb04.pgm.pof  msimp_msimp_arb01.pgm.pof  msimp_msimp_arb02.pgm.pof  msimp_msimp_arb03.pgm.pof  msimp_msimp_arb04.pgm.pof  msimp_simp_arb01.pgm.pof  msimp_simp_arb02.pgm.pof  msimp_simp_arb03.pgm.pof  msimp_simp_arb04.pgm.pof  simp_arb01.pgm.pof  simp_arb02.pgm.pof  simp_arb03.pgm.pof  simp_arb04.pgm.pof  simp_msimp_arb01.pgm.pof  simp_msimp_arb03.pgm.pof  simp_msimp_arb04.pgm.pof  simp_simp_arb02.pgm.pof  simp_simp_arb04.pgm.pof
test_data/multi_simp/brown1070/bir/: bird02.pgm.pof  bird04.pgm.pof  bird07.pgm.pof  bird09.pgm.pof  bird10.pgm.pof  bird13.pgm.pof  bird15.pgm.pof  bird16.pgm.pof  bird17.pgm.pof  bird18.pgm.pof  bird19.pgm.pof  bird20.pgm.pof  bird21.pgm.pof  bird22.pgm.pof  bird23.pgm.pof  bird24.pgm.pof  bird25.pgm.pof  bird26.pgm.pof  bird27.pgm.pof  bird28.pgm.pof  bird29.pgm.pof  bird30.pgm.pof  bird31.pgm.pof  bird32.pgm.pof  bird33.pgm.pof  bird34.pgm.pof  bird35.pgm.pof  bird36.pgm.pof  bird37.pgm.pof  bird38.pgm.pof  bird39.pgm.pof  bird40.pgm.pof  bird41.pgm.pof  bird42.pgm.pof  bird43.pgm.pof  bird44.pgm.pof  bird45.pgm.pof  bird46.pgm.pof  bird47.pgm.pof  bird48.pgm.pof  (+9 more)
test_data/multi_simp/brown1070/bom/: bomber.pgm.pof
test_data/multi_simp/brown1070/bon/: bonefishes.pgm.pof  bonefishesaff1.pgm.pof  bonefishesocc1.pgm.pof  bonefishesocc2.pgm.pof  bonefishesocc4.pgm.pof
test_data/multi_simp/brown1070/bot/: bottle01.pgm.pof  bottle02.pgm.pof  bottle03.pgm.pof  bottle04.pgm.pof  bottle05.pgm.pof  bottle06.pgm.pof  bottle07.pgm.pof  bottle08.pgm.pof  bottle09.pgm.pof  bottle10.pgm.pof  bottle11.pgm.pof  bottle12.pgm.pof  bottle13.pgm.pof  bottle14.pgm.pof  bottle15.pgm.pof  bottle16.pgm.pof  bottle17.pgm.pof  bottle18.pgm.pof  bottle19.pgm.pof  bottle20.pgm.pof  bottle21.pgm.pof  bottle22.pgm.pof  bottle23.pgm.pof  bottle24.pgm.pof  bottle25.pgm.pof  bottle26.pgm.pof  bottle27.pgm.pof  bottle28.pgm.pof  bottle29.pgm.pof  bottle30.pgm.pof  bottle31.pgm.pof  bottle32.pgm.pof  (+1 more)
test_data/multi_simp/davis/: gen_contours.sh  simp.sh
test_data/multi_simp/ice_aco/: test.sh  test2.sh
test_data/multi_simp/icebergs/: test.sh
test_data/multi_simp/noisy_square_800/: generator.ods  test.sh
test_data/multi_simp/square_simple/: msimp_sq1.pof  msimp_sq2.pof  qgis.txt  simp_sq1.pof  sq1.pof  sq1a.pof  sq2.pof  sq2a.pof
test_data/multi_simp/square_tricky/: msimp_sq2.pof  sq1.pof  sq2.pof
(+1496 files in other folders)
